k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nagp-app
  labels:
    app: nagp-k8s-assignment
